# MediaSandbox

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md
.github/workflows/: build.yml
Assets/: packages.config
Assets/Editor/: MediaMetadataInspector.cs
Assets/MediaSandbox/: DragDropMediaSpawner.cs  InitializeMediaSandbox.cs  MediaDecoderSandbox.cs  MediaDropWindow.cs  MediaTypes.cs  SandboxLimits.cs
Assets/Scenes/: SampleScene.unity
Assets/StreamingAssets/mediasandbox/: decoder.wasm
Assets/media~/: decoder.wasm
ProjectSettings/: ProjectSettings.asset
decoder/: Cargo.toml  build.ps1
decoder/src/: animation.rs  attrs.rs  audio.rs  img.rs  lib.rs  meta.rs
scripts/: build-wasm.ps1  build-wasm.sh  build-wasmtime-android.sh  build-wasmtime-ios.sh  build-wasmtime-linux.sh  build-wasmtime-macos.sh  build-wasmtime-windows.ps1  fetch-artifacts.ps1  fetch-artifacts.sh
unity_package/: package.json
unity_package/Plugins/iOS/Wasmtime.xcframework/: Info.plist
unity_package/Runtime/: MediaTypes.cs  xyz.yewnyx.MediaSandbox.asmdef
