[package]
name = "decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "decoder"

[dependencies]
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "bmp", "tiff", "webp", "hdr", "qoi", "gif"
] }
symphonia = { version = "0.5", default-features = false, features = [
    "mp3", "flac", "ogg", "vorbis", "wav", "aiff", "pcm"
] }
kamadak-exif = "0.5"
zune-jpeg = "0.5"
zune-core = "0.5"

[profile.release]
opt-level = "z"
lto = true
strip = true

[profile.release-with-debuginfo]
inherits = "release"
debug = true
split-debuginfo = "packed"
strip = "debuginfo"
